fixed layout bugs - displaying orders

--- a/frontend/src/components/UserPanelComponents/OrderComponent.module.scss
+++ b/frontend/src/components/UserPanelComponents/OrderComponent.module.scss
@@ -159,6 +159,10 @@
     padding: 0;
   }
   .orderList * {
-    min-width: auto;
+    min-width: 8rem;
+  }
+
+  .orderListEl:first-child {
+    display: none;
   }
 }
