--- a/frontend/src/sections/UserSection.module.scss
+++ b/frontend/src/sections/UserSection.module.scss
@@ -50,10 +50,10 @@
     display: none;
   }
   .panelContainer {
-    width: 95%;
+    width: 92%;
   }
   .nav {
-    width: 5%;
+    width: 8%;
     min-width: 3rem;
   }
   .navEl {
